# Synthe

./: CMakeLists.txt  README.md
Synthe/: CMakeLists.txt
Synthe/CMake/: Common.cmake  Graphics.cmake  Win32.cmake
Synthe/Include/Common/: Types.hpp
Synthe/Include/Common/Memory/: Allocator.hpp  FreeListAllocator.hpp  LinearAllocator.hpp  NewAllocator.hpp
Synthe/Include/Graphics/: Fence.hpp  GraphicsCommandList.hpp  GraphicsDevice.hpp  GraphicsResource.hpp  GraphicsResourceView.hpp  GraphicsStructs.hpp  PipelineState.hpp  Swapchain.hpp
Synthe/ShaderCompiler/: ShadersConfig.json
Synthe/Source/D3D12/: D3D12CommandList.cpp  D3D12CommandList.hpp  D3D12DescriptorManager.cpp  D3D12DescriptorManager.hpp  D3D12Fence.cpp  D3D12Fence.hpp  D3D12GPUManager.cpp  D3D12GPUManager.hpp  D3D12GraphicsDevice.cpp  D3D12GraphicsDevice.hpp  D3D12GraphicsPipelineState.cpp  D3D12GraphicsPipelineState.hpp  D3D12MemoryManager.cpp  D3D12MemoryManager.hpp  D3D12Resource.cpp  D3D12Resource.hpp  D3D12ResourceView.cpp  D3D12ResourceView.hpp  D3D12Swapchain.cpp  D3D12Swapchain.hpp
Synthe/Source/Memory/: FreeListAllocator.cpp  LinearAllocator.cpp  NewAllocator.cpp
Synthe/Source/Win32/: DXGIUtility.cpp  Win32Common.hpp
System/: CMakeLists.txt
System/CMake/: Display.cmake  System.cmake  Win32.cmake
System/Include/: System.hpp
System/Include/Display/: Window.hpp
System/Source/Win32/: Win32Common.hpp  Win32Display.cpp  Win32Display.hpp  Win32Time.cpp  Win32WindowCallback.cpp  Win32WindowCallback.hpp  Win32WindowProc.cpp
Test/: CMakeLists.txt  Main.cpp
Test/Assets/Shaders/Source/Commons/: BlendShape.hlsl  Mesh.hlsl
